# BIR

./: CMakeLists.txt  README.md  inference.cpp  main.cpp
src/: CMakeLists.txt  evidence.cpp  evidence.hpp  frame.cpp  frame.hpp  inference.cpp  inference.hpp  ultis.h  ultis.hpp
